// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`help should show help information using the "help --color" option 1`] = `
"[1mUsage[22m: webpack --color
[1mDescription:[22m Enable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

[1mWebpack documentation:[22m https://webpack.js.org/.
[1mCLI documentation:[22m https://webpack.js.org/api/cli/.
[1mMade with ♥ by the webpack team[22m."
`;

exports[`help should show help information using the "help --mode" option 1`] = `
"Usage: webpack --mode <value>
Description: Defines the mode to pass to webpack.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --mode" option 2`] = `
"Usage: webpack --mode <value>
Description: Defines the mode to pass to webpack.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --no-color" option 1`] = `
"Usage: webpack --no-color
Description: Disable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --no-stats" option 1`] = `
"Usage: webpack --no-stats
Description: Disable stats output.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --stats" option 1`] = `
"Usage: webpack --stats [value]
Description: It instructs webpack on how to treat the stats e.g. verbose.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --version" option 1`] = `
"Usage: webpack --version
Short: webpack -v
Description: Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help -v" option 1`] = `
"Usage: webpack --version
Short: webpack -v
Description: Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help serve --color" option 1`] = `
"[1mUsage[22m: webpack serve --color
[1mDescription:[22m Enable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

[1mWebpack documentation:[22m https://webpack.js.org/.
[1mCLI documentation:[22m https://webpack.js.org/api/cli/.
[1mMade with ♥ by the webpack team[22m."
`;

exports[`help should show help information using the "help serve --mode" option 1`] = `
"Usage: webpack serve --mode <value>
Description: Defines the mode to pass to webpack.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help serve --no-color" option 1`] = `
"Usage: webpack serve --no-color
Description: Disable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information with options for "info" command 1`] = `
"Usage: webpack info|i [options]

Outputs information about your system.

Options:
  --output <value>      To get the output in specified format ( accept json or
                        markdown )

Global options:
  --color               Enable colors on console.
  --no-color            Disable colors on console.
  -v, --version         Output the version number of 'webpack', 'webpack-cli'
                        and 'webpack-dev-server' and commands.
  -h, --help [verbose]  Display help for commands and options.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;
